<resources>
    <string name="app_name">MakeyourCs</string>

    <!-- Account -->
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="select_follower">새 부캐를 보여 줄 팔로워를 추가해보세요.</string>
    <!-- Sign In -->
    <string name="name">사용자 이름</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="check_password">비밀번호 확인</string>
    <string name="signin">로그인</string>
    <string name="email">이메일</string>


    <string name="signin_complete">Login success</string>
    <string name="signin_fail">입력된 정보가 올바르지 않습니다.</string>
    <string name="retry">다시시도</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>

    <!-- Sign up -->
    <string name="signup">계정이 아직 없으신가요?</string>
    <string name="signup_title">회원가입</string>
    <string name="reset">reset</string>
    <string name="signup_cele">
        이제, 간단한 프로필 설정 후\n<b>MakeyourCs</b> 를 사용할 수 있습니다!
    </string>
    <string name="signup_email_dup">중복된 이메일 주소입니다. 다시 입력해 주세요.</string>
    <string name="signup_email_form">이메일 형식에 맞지 않습니다. 다시 입력해 주세요.</string>
    <string name="email_ex">ex) MakeyourCs@gmail.com</string>
    <string name="bday_ex">ex) 2021.01.19</string>
    <string name="signup_complete">Membership success</string>
    <string name="pw_condition">6~16자 영문 대 소문자, 숫자를 사용하세요.</string>
    <string name="checkpw_condition">비밀번호가 일치하지 않습니다.</string>
    <string name="setprofile">프로필 설정</string>
    <string name="editableprofile">프로필은 이후 변경 가능합니다.</string>
    <string name="profileimg">프로필 사진 바꾸기</string>
    <string name="username">이름</string>
    <string name="introduce">소개</string>
    <string name="backgroundcolor">배경색</string>
    <string name="changecolor">배경색 변경</string>
    <string name="background_intro">계정 피드 배경색입니다.</string>
    <string name="complete">완료</string>
    <string name="changefollower">팔로워 변경</string>

    <!-- Bottom Navigation View -->
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>

    <!-- User Feed -->
    <string name="change_sub_char">계정변경</string>

    <!--User Feed - Management -->
    <string name="del_confirm">삭제 확인</string>
    <string name="ask_delete_subacc">이 계정을 정말로 삭제하시겠습니까?</string>
    <string name="delete">삭제</string>
    <string name="not_delete">삭제 안 함</string>
    <string name="subacc_cnt">부캐는 \n최대 3개까지 생성할 수 있습니다.</string>
    <string name="confirm">확인</string>
    <string name="origin_cannotdelete">본 계정은 \n삭제할 수 없습니다.</string>
    <string name="add">추가</string>

    <!-- Change sub account-->
    <string name="change_confirm">변경 확인</string>
    <string name="ask_change_subacc">이 계정으로 변경하시겠습니까?</string>
    <string name="change">변경</string>
    <string name="not_change">취소</string>

    <!-- More menu in User Feed -->
    <string name="settings">설정</string>
    <string name="accountmgt">계정 관리</string>
    <string name="editprofile">프로필 편집</string>
    <string name="archive">아카이브</string>
    <string name="logout">로그아웃</string>


    <!-- Account -->
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>


    <!-- Alarm -->
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>

    <!-- Comment -->
    <string name="send">Send</string>

    <!-- Upload Photo -->
    <string name="new_post">새 게시물</string>
    <string name="share">공유</string>
    <string name="text_input">문구 입력</string>
    <string name="tag_people">사람 태그하기</string>
    <string name="tag_location">위치 태그하기</string>
    <string name="setting_closure">공개 범위 설정</string>

    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>

    <!-- Toolbar -->
    <string name="back">Back</string>

    <!-- etc -->
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
