<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alert_white_border"

    android:id="@+id/more_menu"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountmgt"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="15dp"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editprofile"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="15dp"
        ></TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/archive"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="15dp"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:gravity="center"
        android:textSize="20dp"
        android:padding="15dp"
        ></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="20dp"
        android:textColor="@color/red"
        android:background="@color/colorWhite"
        android:padding="15dp"
        android:gravity="center"
        ></TextView>



</LinearLayout>