<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable name="viewmodel"
            type="com.example.makeyourcs.ui.auth.AuthViewModel"/>
    </data>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ui.auth.LoginActivity">

    <ImageView
        android:id="@+id/makeyourcs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="100dp"
        android:src="@drawable/makeyourcs"></ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/makeyourcs"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_username"
            android:text="@={viewmodel.email}"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/round_shape_input"
            android:hint="@string/id"
            android:padding="10dp"
            android:textColor="@color/deepGray"
            android:textColorHint="@color/deepGray"></EditText>

        <EditText
            android:id="@+id/et_password"
            android:text="@={viewmodel.password}"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_shape_input"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/deepGray"
            android:textColorHint="@color/deepGray"
            android:hint="@string/password"></EditText>

        <Button
            android:id="@+id/login"
            android:onClick="@{() -> viewmodel.login()}"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_shape_button"
            android:text="@string/signin"
            android:theme="@style/ButtonStyle"></Button>

        <Button
            android:id="@+id/signup"
            android:onClick="@{(v) -> viewmodel.goToSignup(v)}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/transparent"
            android:text="@string/signup"></Button>
    </LinearLayout>


</RelativeLayout>
</layout>