<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.example.makeyourcs.ui.auth.AuthViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.Signup_SetProfileActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/setprofile"
                android:textColor="@color/black"
                android:textSize="23sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/editableprofile"
                android:textColor="@color/deepGray"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/profile_oval" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@color/transparent"
                android:text="프로필 사진 바꾸기"
                android:textColor="@color/signature"
                android:textSize="19sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="@color/line_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="이름    "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:hint="이름"
                    android:inputType="text"
                    android:text="@={viewmodel.defaultName}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:text="소개    "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:layout_width="260dp"
                    android:layout_height="40dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:hint="소개"
                    android:inputType="text"
                    android:text="@={viewmodel.defaultIntroduce}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="배경색   "
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/colorbox"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="22dp"
                    android:background="@drawable/background_colorbox" />

                <android.widget.Button
                    android:id="@+id/set_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="20dp"
                    android:text="배경색 설정"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/background_intro"
                android:textColor="@color/deepGray"
                android:textSize="12sp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="5dp"/>

            <android.widget.Button
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/orangebtn_selector_img"
                android:text="완료"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold"
                android:onClick="@{(view) -> viewmodel.set_origin_account(view)}"/>
        </LinearLayout>
    </RelativeLayout>

</layout>